Fix: Unify header and mega menu into a premium dark glass aesthetic, fixing light theme mismatch

--- a/terms.html
+++ b/terms.html
@@ -23,6 +23,8 @@
 
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
