--- a/about.html
+++ b/about.html
@@ -298,6 +298,8 @@
 
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
