--- a/agency-collab.html
+++ b/agency-collab.html
@@ -276,6 +276,8 @@
 
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
