--- a/careers.html
+++ b/careers.html
@@ -39,6 +39,8 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
