--- a/contact.html
+++ b/contact.html
@@ -178,6 +178,8 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
