--- a/post.html
+++ b/post.html
@@ -302,6 +302,8 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
