--- a/terms.html
+++ b/terms.html
@@ -25,6 +25,8 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
+        
+    <!-- Floating Header Container -->
     <header class="fixed-header-wrapper">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
