feat: add solutions tab and mega menu

--- a/post.html
+++ b/post.html
@@ -325,10 +325,10 @@
 
             <!-- Center Navigation -->
             <nav class="nav-pill-menu">
-                <!-- Platform Mega Menu -->
+                <!-- Product Mega Menu -->
                 <div class="nav-item-dropdown">
                     <button class="nav-pill-link mobile-dropdown-btn" aria-expanded="false">
-                        Platform <span class="dropdown-arrow">▼</span>
+                        Product <span class="dropdown-arrow">▼</span>
                     </button>
                     <div class="mega-menu">
                          <div class="mega-menu-banner">
@@ -337,47 +337,76 @@
                         </div>
                         <div class="mega-menu-container">
                             <aside class="mega-menu-sidebar">
-                                <div class="sidebar-category">Core Engine</div>
+                                <div class="sidebar-category">Intelligence Layer</div>
                                 <div class="sidebar-item active">
-                                    <span>Intel Engine</span>
-                                    <i class="item-desc">Real-time authority tracking</i>
-                                </div>
-                                <div class="sidebar-item">
-                                    <span>Predictive Graph</span>
-                                    <i class="item-desc">AI-driven impact forecasting</i>
+                                    <span>Product Overview</span>
+                                    <i class="item-desc">Precision authority mapping</i>
                                 </div>
                             </aside>
                             <div class="mega-menu-grid-content">
                                 <div class="grid-header">
-                                    <h4>Capabilities</h4>
+                                    <h4>NYRA Authority Intelligence</h4>
                                 </div>
-                                <div class="grid-items">
+                                <div class="grid-items col-2">
                                      <div class="grid-item">
-                                        <div class="grid-item-icon">🔍</div>
+                                        <div class="grid-item-icon">🕸️</div>
                                         <div class="grid-item-text">
-                                            <h5>Expert Discovery</h5>
-                                            <p>Map B2B content creators & KOLs by intent.</p>
+                                            <h5>Authority Graph™</h5>
+                                            <p>Map real authority relationships between creators & brands.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">📈</div>
                                         <div class="grid-item-text">
-                                            <h5>Impact Forecasting</h5>
-                                            <p>Predict message travel and resonance.</p>
+                                            <h5>Impact Prediction</h5>
+                                            <p>Forecast campaign impact before launch.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">💰</div>
+                                        <div class="grid-item-text">
+                                            <h5>Pricing Intelligence</h5>
+                                            <p>Calculate true market value of creators.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🎯</div>
+                                        <div class="grid-item-text">
+                                            <h5>KPI Optimization</h5>
+                                            <p>Optimize campaign-specific KPI frameworks.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="grid-header" style="margin-top: 24px;">
+                                    <h4>Insights</h4>
+                                </div>
+                                <div class="grid-items col-2">
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">📊</div>
+                                        <div class="grid-item-text">
+                                            <h5>Market & Category</h5>
+                                            <p>Reveal where authority sits across industries.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">👥</div>
+                                        <div class="grid-item-text">
+                                            <h5>Creator & Audience</h5>
+                                            <p>Analyze community strength & engagement quality.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🛡️</div>
                                         <div class="grid-item-text">
-                                            <h5>Authority Audit</h5>
-                                            <p>Technical trust & market-value validation.</p>
+                                            <h5>Brand Authority Tracking</h5>
+                                            <p>Monitor how brand authority evolves over time.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
-                                        <div class="grid-item-icon">🕸️</div>
+                                        <div class="grid-item-icon">📡</div>
                                         <div class="grid-item-text">
-                                            <h5>Influence Mapping</h5>
-                                            <p>Visualizing DOL networks and nodes.</p>
+                                            <h5>Cultural & Trend Signals</h5>
+                                            <p>Detect emerging narratives & cultural shifts.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -385,7 +414,77 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Solutions Mega Menu -->
+                <div class="nav-item-dropdown">
+                    <button class="nav-pill-link mobile-dropdown-btn" aria-expanded="false">
+                        Solutions <span class="dropdown-arrow">▼</span>
+                    </button>
+                    <div class="mega-menu">
+                        <div class="mega-menu-banner">
+                             💼 <span>Tailored intelligence for every stage of growth.</span>
+                        </div>
+                        <div class="mega-menu-container solutions-layout">
+                            <aside class="mega-menu-sidebar">
+                                <div class="sidebar-category">Persona Driven</div>
+                                <div class="sidebar-item active">
+                                    <span>Team Solutions</span>
+                                    <i class="item-desc">Optimized for your workflow</i>
+                                </div>
+                                <div class="sidebar-item">
+                                    <span>Success stories</span>
+                                    <i class="item-desc">Results by industry</i>
+                                </div>
+                            </aside>
+                            <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>For Your Team</h4>
+                                </div>
+                                <div class="grid-items">
+                                     <div class="grid-item">
+                                        <div class="grid-item-icon">🚀</div>
+                                        <div class="grid-item-text">
+                                            <h5>For Startups</h5>
+                                            <p>Move fast, prove real impact, and find your early authority nodes.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🏢</div>
+                                        <div class="grid-item-text">
+                                            <h5>For Enterprises</h5>
+                                            <p>Standardize, scale, and de-risk global influencer activations.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🤝</div>
+                                        <div class="grid-item-text">
+                                            <h5>For Agencies</h5>
+                                            <p>Elevate your strategy and justify client value with hard data.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">💎</div>
+                                        <div class="grid-item-text">
+                                            <h5>Case Studies</h5>
+                                            <p>Explore real-world examples of Authority Intelligence in action.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mega-menu-featured">
+                                <div class="featured-card">
+                                    <div class="featured-tag">RECENT SUCCESS</div>
+                                    <h5>$2M Pipeline Growth</h5>
+                                    <p>How a Cybersecurity series B startup used NYRA to dominate their niche.</p>
+                                    <a href="/post.html" class="mega-menu-explore-btn" style="text-align: center; text-decoration: none; display: block;">Read Case Study</a>
+                                    
+                                    <div style="margin-top: 24px; text-align: center;">
+                                        <a href="/contact.html" class="btn-pill-primary" style="font-size: 13px; padding: 10px 20px;">Book a Solutions Call</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Resources Mega Menu -->
                 <div class="nav-item-dropdown">
                     <button class="nav-pill-link mobile-dropdown-btn" aria-expanded="false">
